# openvino2onnx

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  unittests.yml
openvino2onnx/: __init__.py  __main__.py  builder.py  checker.py  graph.py  ir11.py  logger.py  mapping.py  pass_manager.py  traits.py  utils.py
openvino2onnx/cli/: main_cli.py  omz_download.py
openvino2onnx/domain/: README.md  __init__.py
openvino2onnx/domain/intel/: __init__.py
openvino2onnx/domain/intel/openvino/: __init__.py  utils.py  xml_frontend.py
openvino2onnx/domain/intel/openvino/ir/: ir11.py  mapping.py
openvino2onnx/domain/intel/openvino/passes/: __init__.py  eliminate_useless_floor.py  shapeof_to_constant.py
openvino2onnx/domain/intel/openvino/passes/op/: __init__.py  avgpool.py  batch_norm_inference.py  broadcast.py  clamp.py  concat.py  constant.py  convert.py  convolution.py  convolution_backprop_data.py  depth_to_space.py  divide.py  fake_quantize.py  floormod.py  gather.py  gather_elements.py  gather_nd.py  greater_equal.py  group_normalization.py  hard_sigmoid.py  hsigmoid.py  hswish.py  interpolate.py  less_equal.py  matmul.py  maximum.py  maxpool.py  minimum.py  multiply.py  mvn.py  normalize_l2.py  pad.py  parameter.py  power.py  prior_box.py  prior_box_clustered.py  range.py  reduce.py  relu.py  reshape.py  (+20 more)
openvino2onnx/domain/pytorch/: README.md  __init__.py  diag.py
openvino2onnx/evaluator/: __init__.py
openvino2onnx/legalize/: __init__.py  compose.py  detection_output.py  fold_const.py  mutator.py  single_node.py  utils.py
openvino2onnx/ops/: __init__.py  activation.py  concat.py  conv.py  convert.py  element_wise.py  gather.py  hswish.py  interpolate.py  pool.py  reduce.py  shuffle.py  split.py  strided_slice.py  transpose.py
openvino2onnx/passes/: __init__.py  auto_load.py  logger.py  pattern.py  rewriter.py  utils.py
openvino2onnx/passes/convert/: append_cast.py  castlike_to_cast.py  col2im_to_depthtospace.py  data_conversion.py  eliminate_unused_input.py  eliminate_unused_outputs.py  infer_shape.py  initializer_to_constant.py  reorder_to_nhwc.py  reshape.py  resize_remove_axes.py  trans_input_to_constant.py
openvino2onnx/passes/convert/version_converter/: __init__.py  downgrade.py  upgrade.py
openvino2onnx/passes/convert/version_converter/opset13/: __init__.py
openvino2onnx/passes/convert/version_converter/opset15/: __init__.py  layer_normalization.py
openvino2onnx/passes/convert/version_converter/opset17/: __init__.py  average_pool.py  bitwise_not.py  cast.py  center_crop_pad.py  col2im.py  mish.py  pad.py  reduce_op.py  resize.py
openvino2onnx/passes/convert/version_converter/opset19/: __init__.py  gelu.py
openvino2onnx/passes/optimize/: canonicalize_conv_auto_pad.py  constantofshape_to_constant.py  eliminate_dead_nodes.py  fold_constant.py  onnx_optimizer.py  onnx_sim.py  remove_resize_batch_and_channel_scales.py
openvino2onnx/passes/quantize/: canonicalize_negative_scale.py  canonicalize_negative_zero_point.py  canonicalize_uint8_weights.py  dequantize_weight.py  expand_qconv_channel.py  fuse_qdq.py  merge_quantize_input.py  reorder_quantizelinear.py  space2depth_to_qconv.py
openvino2onnx/passes/transform/: change_resize_batch.py  eliminate_identity.py  eliminate_reshape.py  expand_conv_channel.py  fuse_mish.py  fuse_swish.py  gatherelements_to_gathernd.py  gemm_to_conv.py  inline_functions.py  mute_maxpool_indices.py  prelu_to_leaky.py  reorder_transpose_to_downstream.py  replicate_identity_constant.py  reset_reshape_batch.py  reshape_reorder.py  reshape_replace_zeros.py  resize_move_size_to_scale.py  resize_to_nearest_neighbor.py  shape_to_constant.py  space2depth_to_conv.py  split_conv_out_channel.py  split_to_slice.py  splittosequence_to_slice.py
tests/: conftest.py  test.py
tests/models/: model.list
