[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "openvino2onnx"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Wenyi Tang", email = "wenyitang@outlook.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["onnx >= 1.8.1", "networkx", "numpy", "tabulate"]

[project.urls]
Home = "https://github.com/LoSealL/openvino2onnx"
Docs = "https://loseall.github.io/openvino2onnx"

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "isort",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "onnxoptimizer",
    "onnxruntime",
    "onnxsim < 0.4.36",
    "openvino >= 2024.1.0",
    "openvino-dev >= 2024.1.0",
]

[project.scripts]
openvino2onnx = "openvino2onnx.__main__:main"

[tool.pyright]
include = ["openvino2onnx"]
exclude = ["openvino2onnx/domain/pytorch", "tests", "tests_omz_fuzzy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "-s"]

[tool.flake8]
ignore = ['E203', 'E231', 'E241']
per-file-ignores = ['__init__.py:F401']
exclude = []
max-line-length = 88
max-complexity = 20
count = true

[tool.isort]
profile = "black"
skip_glob = []

[tool.pylint."MAIN"]
ignore-paths = []

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "logging-fstring-interpolation",
    "missing-module-docstring",
    "no-member",
    "no-name-in-module",
    "fixme",
    "R",
    "I",
]

[tool.mypy]
disable_error_code = ["assignment", "import-untyped", "return-value", "return"]
exclude = [
    '^openvino2onnx/domain/pytorch/.*\.py$',
    '^tests.*\.py$',
]
